fix: gives proper spacing and padding to adjust content

--- a/app/Sections/section.module.css
+++ b/app/Sections/section.module.css
@@ -2,10 +2,15 @@
 .secondsection {
     display: grid;
     grid-auto-flow: row;
+    padding: 20px;
 }
 
 .mobileanimate {
     display: none;
+}
+
+.Animation{
+    justify-self: center;
 }
 
 .whoweare {
@@ -59,7 +64,7 @@
     position: relative;
     border: 1px solid var(--Primary, #00A9FF);
     width: 880px;
-    height: 130px;
+    height: 50px;
     justify-self: center;
     border-bottom: none;
     border-radius: 5px;
@@ -70,7 +75,7 @@
     left: 50%;
     top: 0;
     bottom: 0;
-    height: 220px;
+    height: 140px;
     background-color: #00A9FF;
     width: 1px;
 }
@@ -146,7 +151,7 @@
     grid-auto-flow: column;
     background-color: #ECFAFF;
     align-items: center;
-    padding: 50px;
+    padding: 30px;
 }
 
 .getstarted p {
@@ -193,12 +198,14 @@
     width: 300px;
     display: grid;
     grid-auto-flow: column;
+    justify-content: left;
 }
 
 .name>input {
     outline: none;
     border: none;
     border-radius: 10px;
+    padding: 5px;
 }
 
 .formline {
@@ -219,6 +226,7 @@
 .name img {
     justify-self: center;
     align-self: center;
+    padding: 5px;
 }
 
 .message {
@@ -243,8 +251,14 @@
     height: 40px;
     align-content: center;
     justify-self: center;
+    cursor: pointer;
 }
 
+.error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+  }
 
 /* fourth section */
 .fourthsection {
